# starname

./: .gitignore  LICENSE  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
starname/: __init__.py  dir.py
tests/: test_repeat.py
