[metadata]
name = starname
version = 0.1.0
author = Vyryn
description = Names stars deterministically from their designations.
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://github.com/vyryn/starname
license = MIT
license_files = [LICENSE]

platforms = unix, linux, osx, win32
classifiers = 
    Intended Audience :: Researchers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6

[options]
packages = find:
install_requires =
    PyYAML
    ordered-set
python_rqeuires = >=3.6
package_data =
    =starname=["database/*"]
zip_safe = no

[bdist_wheel]
universal = 1


[options.extras_require]
testing =
    flake8>=5.0
    tox>=3.26.0
    pytest>=7.1
    pytest-cov>=4.0
    mypy>=0.982
    nltk

[options.package_data]
starname = py.typed

[flake8]
max-line-length = 120
extend-ignore = E203
